--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
         <h1>Test</h1>
     </div>
     <div class="container">
+
+    <div class="eventDark">
         Hei
+    </div>
+    <div class="eventLight">
+        Hei
+    </div>
     </div>
 </body>
 
