Mer test av vise events

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Test</title>
 
@@ -16,16 +25,47 @@
 <body>
 
     <div class="header">
-        <h1>Test</h1>
+        <h1>Show & Do</h1>
     </div>
     <div class="container">
 
+
     <div class="eventDark">
-        Hei
+        <div class="row">
+            <div class="col-sm-5">
+                <img src="img/event1.jpg" class="img-responsive" alt="Bilde av event">
+            </div>
+            <div class="col-sm-7">
+                <h2>Gameplan</h2>
+                <p class="lead">kl. 13 i Room OSL - 301</p>
+            </div>
+        </div>
     </div>
+
     <div class="eventLight">
-        Hei
+                <div class="row">
+            <div class="col-sm-5">
+                <img src="img/event1.jpg" class="img-responsive" alt="Bilde av event">
+            </div>
+            <div class="col-sm-7">
+                <h2>Gameplan</h2>
+                <p class="lead">kl. 13 i Room OSL - 301</p>
+            </div>
+        </div>
     </div>
+
+    <div class="eventDark">
+        <div class="row">
+            <div class="col-sm-5">
+                <img src="img/event1.jpg" class="img-responsive" alt="Bilde av event">
+            </div>
+            <div class="col-sm-7">
+                <h2>Gameplan</h2>
+                <p class="lead">kl. 13 i Room OSL - 301</p>
+            </div>
+        </div>
+    </div>
+
     </div>
 </body>
 
