--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <div class="row">
         <div class="col-sm-2 cal"><h3>Git</h3> hieesghsjgh ksjghskjdhg </div>
         <div class="col-sm-2 cal"><h3>React</h3></div>
-        <div class="col-sm-2 cal" style="border: 1px solid black;"><h3>Git</h3> kjsg kjhsg ksjhdg jhsgk</div>
+        <div class="col-sm-2 cal"><h3>Git</h3> kjsg kjhsg ksjhdg jhsgk</div>
         <div class="col-sm-2 cal"><h3>Git</h3></div>
         <div class="col-sm-2 cal"><h3>Git</h3></div>
     </div>
-        <div class="row">
+    <div class="row">
         <div class="col-sm-2 cal"><h3>Git</h3> hieesghsjgh ksjghskjdhg </div>
         <div class="col-sm-2 cal"><h3>React</h3></div>
         <div class="col-sm-2 cal"><h3>Git</h3></div>
