Kalenderoppsett, navigasjon mellom sessions

--- a/index.html
+++ b/index.html
@@ -30,19 +30,42 @@
     <div class="container">
 
     <div class="row">
-        <div class="col-sm-2 cal"><h3>Git</h3> hieesghsjgh ksjghskjdhg </div>
+
+        <div class="col-sm-4">
+            <div class="pull-left">Previous</div>
+        </div>
+        <div class="col-sm-4">
+            <div class="text-center">This week</div>
+        </div>
+        <div class="col-sm-4">
+            <div class="pull-right">Next</div>
+        </div>
+
+    </div>
+
+    <div class="row calRow">
+        <div class="col-sm-2 cal"><h3>Git</h3></div>
         <div class="col-sm-2 cal"><h3>React</h3></div>
         <div class="col-sm-2 cal"><h3>Git</h3> kjsg kjhsg ksjhdg jhsgk</div>
         <div class="col-sm-2 cal"><h3>Git</h3></div>
         <div class="col-sm-2 cal"><h3>Git</h3></div>
     </div>
-    <div class="row">
-        <div class="col-sm-2 cal"><h3>Git</h3> hieesghsjgh ksjghskjdhg </div>
+    <div class="row calRow">
+        <div class="col-sm-2 cal"></div>
         <div class="col-sm-2 cal"><h3>React</h3></div>
         <div class="col-sm-2 cal"><h3>Git</h3></div>
         <div class="col-sm-2 cal"><h3>Git</h3></div>
         <div class="col-sm-2 cal"><h3>Git</h3></div>
     </div>
+        <div class="row calRow">
+        <div class="col-sm-2 cal"></div>
+        <div class="col-sm-2 cal"><h3>React</h3></div>
+        <div class="col-sm-2 cal"><h3>Git</h3></div>
+        <div class="col-sm-2 cal"><h3>Git</h3></div>
+        <div class="col-sm-2 cal"><h3>Git</h3></div>
+    </div>
+        <p></p>
+        <p class="lead"><a href="test">Legg til track</a></p>
 
     <div class="eventDark">
         <div class="row">
