--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <div class="container">
 
-    <div class="row">
+    <div class="row"> <!--Navigation text-->
 
         <div class="col-sm-4">
             <div class="pull-left">Previous</div>
@@ -103,7 +103,7 @@
         </div>
     </div>
 
-    </div>
+    </div> <!--end main container-->
 </body>
 
 </html>
