adding angular to index.html

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div class="header">
         <h1>Show & Do</h1>
     </div>
+
     <div class="container">
 
     <div class="row"> <!--Navigation text-->
@@ -104,6 +105,9 @@
     </div>
 
     </div> <!--end main container-->
+
+    <script src="/node_modules/angular/angular.js"></script>
+
 </body>
 
 </html>
