--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
     </div>
 
+        <!--calender view-->
 <table class="table table-responsive">
 	<tbody>
     <tr>
@@ -56,7 +57,7 @@
       <td class="cal">Git</td>
       <td class="cal">React</td>
       <td class="cal">Gameplan</td>
-      <td class="cal">Gulp</td>
+      <td class="cal">konkuranse i kaffe drikking</td>
       <td class="cal">Kake bakeing</td>
     </tr>
     <tr>
@@ -70,6 +71,8 @@
 </table>
         <p></p>
         <p class="lead"><a href="test">Legg til track</a></p>
+
+        <!--List view--->
 
     <div class="eventDark">
         <div class="row">
