and now it scrolls..

--- a/index.html
+++ b/index.html
@@ -45,31 +45,31 @@
     </div>
 
         <!--calender view-->
-<table class="table table-responsive">
-	<tbody>
-    <tr>
-      <td class="cal">Git</td>
-      <td class="cal">React</td>
-      <td class="cal">Gameplan</td>
-      <td class="cal">Gulp</td>
-      <td class="cal">Kake bakeing</td>
-    </tr>
-    <tr>
-      <td class="cal">Git</td>
-      <td class="cal">React</td>
-      <td class="cal">Gameplan</td>
-      <td class="cal">konkuranse i kaffe drikking</td>
-      <td class="cal">Kake bakeing</td>
-    </tr>
-    <tr>
-      <td class="cal">Git</td>
-      <td class="cal">React</td>
-      <td class="cal">Gameplan</td>
-      <td class="cal">Gulp</td>
-      <td class="cal">Kake bakeing</td>
-    </tr>
-  </tbody>
-</table>
+        <div class="table table-responsive">
+            <table>
+                <tr>
+                  <td class="cal">Git</td>
+                  <td class="cal">React</td>
+                  <td class="cal">Gameplan</td>
+                  <td class="cal">Gulp</td>
+                  <td class="cal">Kake bakeing</td>
+                </tr>
+                <tr>
+                  <td class="cal">Git</td>
+                  <td class="cal">React</td>
+                  <td class="cal">Gameplan</td>
+                  <td class="cal">konkuranse i kaffe drikking</td>
+                  <td class="cal">Kake bakeing</td>
+                </tr>
+                <tr>
+                  <td class="cal">Cakerating for show and do</td>
+                  <td class="cal">React</td>
+                  <td class="cal">Gameplan</td>
+                  <td class="cal">Gulp</td>
+                  <td class="cal">Kake bakeing</td>
+                </tr>
+            </table>
+        </div>
         <p></p>
         <p class="lead"><a href="test">Legg til track</a></p>
 
@@ -90,10 +90,10 @@
     <div class="eventLight">
                 <div class="row">
             <div class="col-sm-5">
-                <img src="img/event1.jpg" class="img-responsive" alt="Bilde av event">
+                <img src="img/git.png" class="img-responsive" alt="Bilde av git-event">
             </div>
             <div class="col-sm-7">
-                <h2>Gameplan</h2>
+                <h2>Git</h2>
                 <p class="lead">kl. 13 i Room OSL - 301</p>
             </div>
         </div>
