ng-include header.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app>
 
 <head>
     <meta charset="utf-8">
@@ -24,9 +24,7 @@
 
 <body>
 
-    <div class="header">
-        <h1>Show & Do</h1>
-    </div>
+    <div ng-include="'components/header.html'"></div><!--Header-->
 
     <div class="container">
 
