components: calender.html

--- a/index.html
+++ b/index.html
@@ -30,33 +30,8 @@
 
         <div ng-include="'components/navigation.html'"></div><!--navigation.html-->
 
-        <!--calender view-->
-        <div class="table table-responsive">
-            <table>
-                <tr>
-                  <td class="cal">Git<a href="#secondInfo">Click to scroll down</a></td>
-                  <td class="cal">React</td>
-                  <td class="cal">Gameplan</td>
-                  <td class="cal">Gulp</td>
-                  <td class="cal">Kake bakeing</td>
-                </tr>
-                <tr>
-                  <td class="cal">Git</td>
-                  <td class="cal">React</td>
-                  <td class="cal">Gameplan</td>
-                  <td class="cal">konkuranse i kaffe drikking</td>
-                  <td class="cal">Kake bakeing</td>
-                </tr>
-                <tr>
-                  <td class="cal">Cakerating for show and do</td>
-                  <td class="cal">React</td>
-                  <td class="cal">Gameplan</td>
-                  <td class="cal">Gulp</td>
-                  <td class="cal">Kake bakeing</td>
-                </tr>
-            </table>
-        </div>
-        <p></p>
+        <div ng-include="'components/calender.html'"></div><!--calender.html-->
+
         <p class="lead"><a href="test">Legg til track</a></p>
 
         <!--List view--->
