component: list.html

--- a/index.html
+++ b/index.html
@@ -24,55 +24,21 @@
 
 <body>
 
-    <div ng-include="'components/header.html'"></div><!--header.html-->
+    <!--HEADER-->
+    <div ng-include="'components/header.html'"></div>
 
     <div class="container">
+        <!--NAVIGATION-->
+        <div ng-include="'components/navigation.html'"></div>
 
-        <div ng-include="'components/navigation.html'"></div><!--navigation.html-->
-
-        <div ng-include="'components/calender.html'"></div><!--calender.html-->
+        <!--CALENDER VIEW-->
+        <div ng-include="'components/calender.html'"></div>
 
         <p class="lead"><a href="test">Legg til track</a></p>
 
-        <!--List view--->
-
-    <div class="eventDark">
-        <div class="row">
-            <div class="col-sm-5">
-                <img src="img/event1.jpg" class="img-responsive" alt="Bilde av event">
-            </div>
-            <div class="col-sm-7">
-                <h2>Gameplan</h2>
-                <p class="lead">kl. 13 i Room OSL - 301</p>
-            </div>
-        </div>
-    </div>
-
-    <div id="#secondInfo" class="eventLight">
-                <div class="row">
-            <div class="col-sm-5">
-                <img src="img/git.png" class="img-responsive" alt="Bilde av git-event">
-            </div>
-            <div class="col-sm-7">
-                <h2>Git</h2>
-                <p class="lead">kl. 13 i Room OSL - 301</p>
-            </div>
-        </div>
-    </div>
-
-    <div class="eventDark">
-        <div class="row">
-            <div class="col-sm-5">
-                <img src="img/event1.jpg" class="img-responsive" alt="Bilde av event">
-            </div>
-            <div class="col-sm-7">
-                <h2>Gameplan</h2>
-                <p class="lead">kl. 13 i Room OSL - 301</p>
-            </div>
-        </div>
-    </div>
-
-    </div> <!--end main container-->
+        <!--LIST VIEW-->
+        <div ng-include="'components/list.html'"></div>
+    </div><!--end container-->
 
     
     <script>
