Reverterte tilbake til table for kalender. Fiksa på litt bootstrap klasser

--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
         <div ng-include="'components/navigation.html'"></div>
 
         <!--CALENDER VIEW-->
+        <!--
         <div ng-include="'components/calender.html'"></div>
+        -->
+
+        <!--CALENDER VIEW FLEXBOX-->
+        <div ng-include="'components/calender-flexbox.html'"></div>
 
         <p class="lead"><a href="test">Legg til track</a></p>
 
