angular.module & angular.controller

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app>
+<html ng-app="showDoApp">
 
 <head>
     <meta charset="utf-8">
@@ -59,6 +59,16 @@
 
     <script src="/node_modules/angular/angular.min.js"></script>
     <script src="/js/main.js"></script>
+
+
+    <script>
+        var showDoApp = angular.module("showDoApp", []);
+
+        showDoApp.controller("ShowDoController", function(){
+
+        });//end showDoApp
+    </script>
+
 
 </body>
 
