--- a/index.html
+++ b/index.html
@@ -62,15 +62,8 @@
         var showDoApp = angular.module("showDoApp", []);
 
         showDoApp.controller("ShowDoController", /*['$scope', '$http',*/ function($scope, $http, $location, $anchorScroll){
-            $scope.events = [];
-
-            $http.get('info.json')
-                .then(function (json){
-
-                //TODO choose date iterate
-                $scope.events = json[0].events;
-
-            });
+             $http.get("info.json")
+                .then(function (response){$scope.events = response.data.records;});
 
              //scrollTo more info
             $scope.scrollTo = function(id){
