Fjerna Angular. Lagt til jQuery .loade for å hente inn 'components'. Og flytta jQuery fra index.html til main.js.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html ng-app="showDoApp">
+<html>
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
 
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
 
@@ -19,67 +16,42 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
     <title>Test</title>
 
 </head>
-
 <body>
-    <section ng-controller="ShowDoController as showDoCtrl">
 
-        <!--HEADER-->
-        <div ng-include="'components/header.html'"></div>
+    <!--HEADER-->
+    <div id="header"></div>
 
-        <div class="container">
-            <!--NAVIGATION-->
-            <div ng-include="'components/navigation.html'"></div>
+    <div class="container">
 
-            <!--CALENDER VIEW-->
+        <!--NAVIGATION-->
+        <div id="navigation"></div>
 
-            <div ng-include="'components/calender.html'"></div>
+        <!--CALENDER VIEW-->
+        <div id="calender"></div>
 
-            <!--CALENDER VIEW FLEXBOX
-            <div ng-include="'components/calender-flexbox.html'"></div>
-              -->
-            <p class="lead"><a href="test">Legg til track</a></p>
+        <!--CALENDER VIEW FLEXBOX
+        <div id="calender-flexbox"></div>-->
 
-            <!--LIST VIEW-->
-            <div ng-include="'components/list.html'"></div>
+        <!--ADD NEW TRACK-->
+        <p class="lead"><a href="test">Legg til track</a></p>
 
-        </div><!--end container-->
+        <!--LIST VIEW-->
+        <div id="list"></div>
 
-        <!--scrollToTop button-->
-        <a href="#" class="scrollToTopBtn">
-            <i class="fa fa-arrow-circle-up fa-4x" aria-hidden="true"></i>
-        </a><!--end scrollToTop button-->
-    </section>
+    </div><!--end container-->
+
+    <!--SCROLL TO TOP BUTTON-->
+    <a href="#" id="scrollToTopBtn">
+        <i class="fa fa-arrow-circle-up fa-4x" aria-hidden="true"></i>
+    </a><!--end SCROLL TO TOP BUTTON-->
 
 
-    <script src="/node_modules/angular/angular.min.js"></script>
+    <!--SCRIPT-->
     <script src="/js/main.js"></script>
 
-
-    <script>
-        var showDoApp = angular.module("showDoApp", []);
-
-        showDoApp.controller("ShowDoController", /*['$scope', '$http',*/ function($scope, $http, $location, $anchorScroll){
-            $scope.events = [];
-
-            $http.get('info.json')
-                .then(function (json){
-
-                //TODO choose date iterate
-                $scope.events = json[0].events;
-
-            });
-
-             //scrollTo more info
-            $scope.scrollTo = function(id){
-                $location.hash(id);
-                $anchorScroll();
-            };
-            //end scrollTo more info
-
-        });//end ShowDoController
-    </script>
 </body>
 </html>
