--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <!--SCRIPT-->
     <script src="/js/main.js"></script>
-    <script src="js/json.js"></script>
+    <script src="/js/json.js"></script>
 
 </body>
 </html>
