Brand site style to index.html

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <title>Test</title>
 
 </head>
-<body>
+<body class="frontpage">
 
     <!--HEADER-->
     <div id="header"></div>
-
-    <div class="container">
+    <main>
+        <div class="wrapper basic">
 
         <!--NAVIGATION-->
         <div id="navigation"></div>
@@ -36,13 +36,14 @@
         <!--CALENDER VIEW FLEXBOX
         <div id="calender-flexbox"></div>-->
 
-        <!--ADD NEW TRACK-->
-        <p class="lead"><a href="test">Legg til track</a></p>
+        <!--ADD NEW TRACK
+        <p class="lead"><a href="test">Legg til track</a></p>-->
 
         <!--LIST VIEW-->
         <div id="list"></div>
 
-    </div><!--end container-->
+        </div><!--end container-->
+    </main><!--end main-->
 
     <!--SCROLL TO TOP BUTTON-->
     <a href="#" id="scrollToTopBtn">
